k8s/ammara-mysql-pvc.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mysql-db
