k8s/ammara-app-bg-dp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ammara-app
  namespace: ammara-app
  labels:
    app: ammara-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ammara-app
  template:
    metadata:
      labels:
        app: ammara-app
    spec:
      containers:
        - name: ammara-app
          image: devopsusr/ammara:v6
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
          readynessProbe:
            httpGet: 
              path: /healthz
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          livenessProbe:
            httpGet:        
              path: /live
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 15
            timeoutSeconds: 2
            failureThreshold: 3
      restartPolicy: Always
