k8s/ammara-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ammara-app
  labels:
    app: ammara-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ammara-app
  template:
    metadata:
      labels:
        app: ammara-app
    spec:
      containers:
        - name: ammara-app
          image: devopsusr/ammara:v11
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
