k8s/ammara-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ammara-app-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  rules:
    - host: ammara.co.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ammara-app
                port:
                  number: 5000
    - host: www.ammara.co.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ammara-app
                port:
                  number: 5000                  
  tls:
    - hosts:
        - ammara.co.in
        - www.ammara.co.in
      secretName: ammara-co-in-tls
